2006-10-15  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (input-forward-word): new function
	(input-backward-word): likewise
	*input-map*: bind input-forward-word and input-backward-word

	* user.lisp (fmt-screen-window-list): new function
	("only"): use screen-x screen-y screen-width and screen-height
	(interactive-command): update the modeline 

	* stumpwm.asd (:stumpwm): add mode-line

	* primitives.lisp (screen): add mode-line

	* core.lisp (screen-x): new function
	(screen-y): likewise
	(screen-height): adjust the screenheight for the modeline
	(make-initial-frame): take an x and y as well. all callers updated.
	(sync-all-frame-windows): new function
	(offset-frames): likewise
	(grow-tree): likewise
	(grow-frames): likewise
	(screen-root): likewise

	* primitives.lisp (char->keysym): remove unused function

	* input.lisp (is-modifier): moved from primitives.lisp

2006-10-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (*input-map*): add arrow key bindings
	populate *input-map* with bindings when it's nil.

2006-10-05  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (*top-map*): init to nil
	populate *top-map* with bindings when it's nil.
	
	* user.lisp (*root-map*): swap hsplit and vsplit bindings.
	(*root-map*): init to nil
	populate *root-map* with bindings when it's nil.

2006-10-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (run-prog): for sbcl and cmucl let the
	subprocess inherit the stdout and stderr streams of the current
	process.

2006-09-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* version.lisp (*version*): new defvar
	(echo-version): new function
	("version"): new command

	* user.lisp (*root-map*): bind v to version

	* stumpwm.asd (:stumpwm): add version.lisp

2006-09-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* sample-stumpwmrc.lisp: add example of changing prefix key.

	* user.lisp (set-prefix-key): verify the KEY's type.

2006-09-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("shell"): use xterm
