@@ -1,3 +1,7 @@
+2006-10-16  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* stumpwm.lisp (stumpwm-internal-loop): set *debugger-hook* to a function that ungrabs the pointer
+
 2006-10-15  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* input.lisp (input-forward-word): new function
